syntax = "proto2";

package reil.proto;

message Node {
  optional uint64 address = 1;
  optional uint32 offset = 2;
};

enum EdgeKind {
  REIL_FLOW = 0;
  REIL_BRANCH = 1;
  NATIVE_FLOW = 2;
  NATIVE_BRANCH = 3;
  NATIVE_CALL = 4;
  NATIVE_RETURN = 5;
  NATIVE_BREAK = 6;
  INVALID = 7;
};

message Edge {
  optional Node source = 1;
  optional Node target = 2;
  optional EdgeKind kind = 3;
};

message ControlFlowGraph {
  repeated Edge edges = 1;
};